# fairmof-api

./: .gitignore  README.md  pyproject.toml
data/json/: nomad_upload.json
fairmof_api/: api.py  filetyper.py
