[tool.poetry]
name = "fairmof-api"
version = "0.1.0"
description = ""
authors = ["bafgreat <75862753+bafgreat@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fairmof_api"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
