[tool.poetry]
name = "fairmof-api"
version = "0.1.0"
description = "A python API for downloading MOF data from NOMAD"
authors = ["Dinga Wonanke"]
readme = "README.md"
packages = [{include = "fairmof_api"}]

[tool.poetry.dependencies]
python = "^3.9"
ase = "^3.22.1"
pint = "^0.23"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
